# dysarthria-voice-assistant

./: .env.example  .gitignore  PRD.md  README.md  pytest.ini
agent-sdk/: README.md  pyproject.toml
agent-sdk/agent_sdk/: __init__.py  client.py  config.py  worker_base.py
agent-sdk/agent_sdk/dispatcher/: __init__.py  task_dispatcher.py
agent-sdk/agent_sdk/http/: __init__.py  async_client.py
agent-sdk/agent_sdk/pool/: __init__.py  worker_manager.py
agent-sdk/agent_sdk/stream/: __init__.py  config.py  stream_manager.py
ai-workers/: __init__.py  agent_worker_example.py  asr_worker_example.py
backend/: README.md
docs/: API_SPECIFICATION.md  ARCHITECTURE.md
frontend/: README.md
shared/: __init__.py
shared/models/: __init__.py  agent.py  asr.py  common.py
tests/: __init__.py  requirements.txt  test_agent_sdk.py  test_ai_workers.py  test_e2e.py
